# Machine-Learning-Framework-Comparison

./: .gitignore  README.md  setup_commands.md
Pytorch/: pyproject.toml
Pytorch/standard_training_example/: neural_network.py  standard_training_example.py
Pytorch/standard_training_examples/STE_Iris/: helpers.py  standard_training_example.py
Pytorch/standard_training_examples/STE_Iris_Large/: iris_dataset.py  neural_network.py  standard_training_example.py
Pytorch/standard_training_examples/STE_MNIST/: helpers.py  main.py  neural_network.py
Pytorch/tutorials/: build_model.py  datasets_dataloaders.py  optimization.py  save_load_model.py  tensors.py  transformers.py
Tensorflow_Keras/: Pipfile
Tensorflow_Keras/standard_training_example/keras/: neural_network.py
Tensorflow_Keras/standard_training_examples/STE_Iris/keras/: iris_dataset.py  standard_training_example.py
Tensorflow_Keras/standard_training_examples/STE_MNIST/keras/: main.py  neural_network.py
Tensorflow_Keras/tutorials/: basic-keras-training-loop.py  basic-tf-training-loop.py
scikit-learn/: Pipfile
scikit-learn/standard_training_examples/STE_Iris/: iris_dataset.py  neural_network.py  standard_training_example.py
scikit-learn/standard_training_examples/STE_MNIST/: main.py  neural_network.py
scikit-learn/tutorials/: basic-data-fit.py  persistance.py
