[tool.poetry]
name = "pytorch"
version = "0.1.0"
description = ""
authors = ["Bennett-Wendorf <bennettwendorf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
torch = {version = "^2.0.1+cpu", source = "torch-cpu"}
torchvision = {version = "^0.15.2+cpu", source = "torch-cpu"}
torchaudio = {version = "^2.0.2+cpu", source = "torch-cpu"}
matplotlib = "^3.7.2"
pandas = "^2.1.0"


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
